--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- navigation bar  -->
     <div class='navigation'>
         <nav>
+
             <ul>
                 <!-- shows the home page link which when clicked takes the user to the index page -->
                 <li class='active'><a href="index.html">HOME</a></li>
@@ -25,7 +26,31 @@
         </nav>
      </div>
 
-     
+
+     <main class="container">
+
+        <video class="video-bg" autoplay muted loop>
+            <source type="" src="">
+        </video>
+
+        <div class="display">
+            <div class="mainText">
+                <h1>WHO AM I?</h1>
+                <p> My name is Hannah Goodridge! I am currently studying Business Computing Web Development at 
+                    Northampton University. I am passionate about design and the creative process within web development.
+                </P>
+                <span> <img src="/images/hannah.png" alt="image of hannah goodridge"></span> 
+            </div>
+            <div class="mainText2">
+                <h1>WHAT SKILLS DO I HAVE?</h1>
+                <P>
+
+                </P>
+            </div>
+
+         </div>
+
+     </main>
 
 </body>
 </html>
