--- a/portfolio.html
+++ b/portfolio.html
@@ -25,5 +25,70 @@
         </nav>
      </div>
 
+
+     <div class="container">
+        <article class="display">
+            <div class="mainText">
+                <h1>MY EXISTING WORK</h1>
+                <P>
+                Take a look through some of the example work i have completed below;
+                </P>
+            </div>
+        </article>
+
+        <div class="display2">
+
+        <div class="portfolio-item">
+            <a href="placeholder.com"><img src="http://lorempixel.com/640/360" alt="placeholder image"></a>
+   
+            <div class="middle">
+                <div class="text">Project One</div>
+            </div>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="placeholder.com"><img src="http://lorempixel.com/640/360" alt="placeholder image"></a>
+   
+            <div class="middle">
+                <div class="text">Project Two</div>
+            </div>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="placeholder.com"><img src="http://lorempixel.com/640/360" alt="placeholder image"></a>
+   
+            <div class="middle">
+                <div class="text">Project Three</div>
+            </div>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="placeholder.com"><img src="http://lorempixel.com/640/360" alt="placeholder image"></a>
+   
+            <div class="middle">
+                <div class="text">Project Four</div>
+            </div>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="placeholder.com"><img src="http://lorempixel.com/640/360" alt="placeholder image"></a>
+   
+            <div class="middle">
+                <div class="text">Project Five</div>
+            </div>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="placeholder.com"><img src="http://lorempixel.com/640/360" alt="placeholder image"></a>
+   
+            <div class="middle">
+                <div class="text">Project Six </div>
+            </div>
+        </div>
+
+        </div>
+
+    </div>
+
 </body>
 </html>
