--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
      <div class="container">
 
-        <video class="video-bg" autoplay muted loop>
-            <source type="" src="">
-        </video>
+        <div class="backgroundImage"><img src='/images/laptop.jpg' alt="laptop background image"></div>
 
         <div class="display">
             <div class="mainText">
@@ -74,6 +72,9 @@
 
     </div>
 
+    <footer>
+        
+    </footer>
 
 </body>
 </html>
