--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         
         <nav class="links">
            
-            <div class="github">
+            <div class="link">
                     <h1>GIT HUB</h1>
             </div>
-            <div class="cv">
+            <div class="link">
                 <h1>SEE MY CV</h1>
             </div>
-            <div class="portfolio">
+            <div class="link">
                 <h1>SEE MY PORTFOLIO</h1>
             </div>
         </nav>
