--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Squada+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d7bdeb14c8.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
