--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Squada+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d7bdeb14c8.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -74,7 +75,9 @@
     </div>
 
     <footer>
-
+        <a href="https://github.com"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></i></a>
+        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></i></a>
     </footer>
 
 </body>
