--- a/cv.html
+++ b/cv.html
@@ -27,9 +27,12 @@
         </nav>
      </div>
     
-     <footer>
-
+    <footer>
+        <a href="https://github.com"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></i></a>
+        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></i></a>
     </footer>
+
 
 </body>
 </html>
