--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,12 @@
       </div>
 
 
-     <footer>
-        
+    <footer>
+        <a href="https://github.com"><i class="fab fa-github-square"></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></i></a>
+        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></i></a>
     </footer>
+
 
 </body>
 </html>
