--- a/cv.html
+++ b/cv.html
@@ -27,6 +27,25 @@
         </nav>
      </div>
     
+     <div class="containerGrid">
+
+        <div class="section1">
+
+        </div>
+
+        <div class="section2">
+
+        </div>
+
+        <div class="section3">
+
+        </div>
+
+
+     </div>
+
+
+
     <footer>
         <a href="https://github.com"><i class="fab fa-github-square"></i></a>
         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></i></a>
