--- a/cv.html
+++ b/cv.html
@@ -30,15 +30,49 @@
      <div class="containerGrid">
 
         <div class="section1">
+        <div>image</div>
 
+        <div class="contactDetails">
+            <h3></h3>
+
+        </div>
+
+        <div class="hobbies">
+            <h3></h3>
+            <p></p>
+
+        </div>
+        
         </div>
 
         <div class="section2">
+            <h1> Hannah Goodridge </h1>
+            <h3> Junior Web Developer </h3>
+            <p>hello </p>
+            
+            <div class="cvParts">
+                <h3>Profile</h3>
+                <p> hello </p>
+            </div>
 
+            <div class="cvParts">
+                <h3>Work Experience</h3>
+                <p> hello </p>
+            </div>
+
+            <div class="cvParts">
+                <h3> Education </h3>
+                <p> hello </p>
+            </div>
         </div>
 
         <div class="section3">
-
+            <h3> Skills </h3>
+            <ul>
+                <li> one </li>
+                <li> two </li>
+                <li> three </li>
+            </ul>
         </div>
 
 
