--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
         <nav>
             <ul>
                 <!-- shows the home page link which when clicked takes the user to the index page -->
-                <li class='active'><a href="index.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <!-- shows the portfolio page link which when clicked takes user to the portfolio page -->
                 <li class='active'><a href="portfolio.html">PORTFOLIO</a></li>
                 <!-- shows the contact page link which when clicked will take user to the contact page when the link is inserted -->
-                <li class='active'><a href="contact.html">CONTACT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             
             </ul>
         </nav>
