--- a/cv.html
+++ b/cv.html
@@ -27,6 +27,10 @@
         </nav>
      </div>
     
+     <div class="title">
+         <h1>Curriculum Vitae</h1>
+     </div>
+
      <div class="containerGrid">
 
         <div class="section1">
