--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@
         <div class="section2">
             <h1> Hannah Goodridge </h1>
             <h3> Junior Web Developer </h3>
-            <p>hello </p>
+            <p>Highly enthusiastic, creative and concertrated individual training as a junior web developer. </p>
             
             <div class="cvParts">
                 <h3>Profile</h3>
