contact commenting done

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- links the stylesheet main.css to the html document -->
     <link rel="stylesheet" href="main.css">
+    <!-- links google api fonts into html document -->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Squada+One&display=swap" rel="stylesheet">
+    <!-- links font awesome into html document -->
     <script src="https://kit.fontawesome.com/d7bdeb14c8.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <!-- title of the document -->
+    <title>Portfolio</title>
 </head>
 <body>
     
@@ -17,9 +21,10 @@
             <ul>
                 <!-- shows the home page link which when clicked takes the user to the index page -->
                 <li><a href="index.html">HOME</a></li>
-                <!-- shows the portfolio page link which when clicked takes user to the portfolio page -->
+                <!-- shows the portfolio page link which when clicked takes user to the portfolio page, 
+                the active class will be used to style the navigation link to act differently when the page is used-->
                 <li class='active'><a href="portfolio.html">PORTFOLIO</a></li>
-                <!-- shows the contact page link which when clicked will take user to the contact page when the link is inserted -->
+                <!-- shows the contact page link which when clicked will take user to the contact page -->
                 <li><a href="contact.html">CONTACT</a></li>
             
             </ul>
