--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </P>
             </div>
     
-            <!-- <!-- creates mainTextP span to hold an image of my skills which can be positioned within the grid --> -->
+            <!-- creates mainTextP span to hold an image of my skills which can be positioned within the grid --> 
             <span class="mainTextP"> <img src="/images/skills.PNG" alt="skill representation"></span>
             
             <!-- creates a mainText3 div which will be positioned by the grid, it holds the title put before the links -->
@@ -94,9 +94,9 @@
         <!-- an icon for github through font awesome which when clicks takes the user to github -->
         <a href="https://github.com"><i class="fab fa-github-square"></i></a>
         <!-- an icon for instagram through font awesome which when clicks takes the user to instagram -->
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
         <!-- an icon for linked in through font awesome which when clicked takes the user to linkedin -->
-        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></i></a>
+        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></a>
     </footer>
 
 </body>
