--- a/cv.html
+++ b/cv.html
@@ -145,9 +145,9 @@
         <!-- an icon for github through font awesome which when clicks takes the user to github -->
         <a href="https://github.com"><i class="fab fa-github-square"></i></a>
         <!-- an icon for instagram through font awesome which when clicks takes the user to instagram -->
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></i></a>
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
         <!-- an icon for linked in through font awesome which when clicked takes the user to linkedin -->
-        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></i></a>
+        <a href="https://uk.linkedin.com/"><i class="fab fa-linkedin"></i></a>
     </footer>
 
 
