--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
         <div class="section1">
             <!-- image of myself for the cv -->
             <div class="imageCV">
-                <img src="/images/hannah.png" alt="picture of hannah">
+                <img src="images/hannah.png" alt="picture of hannah">
             </div>
 
             <!-- contact details including email, phone number and address, the actual address is placed within another div
